# oil-and-gas-semantic

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
configs/: contest.yaml  default.yaml
docs/: WORKFLOW.md  repo-map.html
docs/adr/: 0001-adopt-osdu-production-operations-scope.md  0002-hybrid-synthetic-data-generator.md  0003-six-layer-neutral-reference-architecture.md  0004-lpg-knowledge-layer-yaml-metrics.md  0005-open-agent-layer-question-answer-contract.md  0006-deterministic-gold-expected-forecast.md  0007-parquet-canonical-osdu-json-secondary.md  0008-osi-semantic-format-metricflow-engine.md  0009-two-population-performance-surveillance-materiality.md  0010-source-canonical-schema-from-osdu-published-models.md  0011-metricflow-validates-manifest-duckdb-reference-compile.md  0012-shell-contest-boundary-axis-b.md  0013-axis-b-discrimination-scope.md  0014-axis-a-emerges-from-contest-designated-platform.md  0015-contest-operations-and-rubric-hardening.md  0016-held-out-evaluation-seed-grading.md  0017-downtime-event-model-and-forecast-rate-deferment.md  0018-decline-trend-kpi-definitions.md  0019-welltest-allocation-model-and-kpis.md  0020-assessment-harness-contract.md  0021-facility-hierarchy-and-rollup-kpis.md  0022-watchlist-kpi-definitions.md  0023-volve-calibration-of-decline-watercut-gor.md  0024-adversarial-question-tier.md  0025-grading-contract-hardening.md  0026-eval-run-bundle.md  0027-acceptance-checklists-as-spec-artifacts.md  0028-sealed-set-file-manifest-digest.md  0029-sealed-adversarial-paraphrase-variants.md  0030-webapp-data-contract-gold-binding.md  0031-osdu-json-manifest-export.md  0032-breakthrough-scenario-knob.md  0033-breakthrough-oil-impairment-decline-band.md  0034-frozen-contest-config.md
docs/agents/: issue-tracker.md
docs/contest/: change-request-round.md  eval-run.md  fork-point.md  implementation-plan-template.md
docs/contest/implementation-plans/: claude-code.md
docs/reviews/: pr-32-question-catalog-fixes.md
knowledge/: README.md  vocabulary.yaml
notebooks/: README.md  walkthrough.ipynb
notebooks/.ipynb_checkpoints/: walkthrough-checkpoint.ipynb
semantic/: README.md  metrics.yaml  project.yaml  semantic_models.yaml
spec/acceptance/: README.md  adversarial-tier.yaml  asset-rollups.yaml  decline-trend.yaml  deferment-downtime.yaml  operational-exceptions.yaml  operations-console.yaml  sealed-change-request.yaml  welltest-allocation.yaml
spec/contest/change-requests/: README.md  manifest.yaml
spec/osdu/: README.md  pdm_dictionary_excerpt.md  pdm_profile.json
spec/questions/: README.md  answer_submission.schema.json  catalog.yaml
spec/questions/adversarial-variants/: README.md  manifest.yaml
spec/questions/examples/: adversarial-ambiguous-recent-production.json  adversarial-ambiguous-underperformers.json  adversarial-ambiguous-worst-field.json  adversarial-compound-below-expected-and-anomalous.json  adversarial-compound-below-expected-and-stale.json  adversarial-compound-stale-and-anomalous.json  adversarial-trap-reliability-pick.json  adversarial-trap-stale-allocation.json  adversarial-trap-untested-rate.json  decline-12-month-field-oil.json  deferment-top-downtime-causes.json  rollup-oil-gas-water-by-field-operator.json  surveillance-below-expected-oil.json  watchlist-down-watering-out-gor-change.json  welltest-stale-or-anomalous-allocation.json
spec/volve/: README.md  fit_calibration.py
spec/webapp/: README.md  data-contract.yaml  screenshots.md
src/oag_generator/: __init__.py  cli.py  config.py  generator.py  gold.py  osdu_manifest.py  questions.py  schema.py
src/oag_harness/: README.md  __init__.py  cli.py  custody.py  effort.py  evalseed.py  examples.py  functional.py  locus.py  panel.py  probes.py  round2.py  scorecard.py  seal_cli.py  spec_fidelity.py  variants.py  webapp.py
src/oag_semantic/: __init__.py  agent.py  answer.py  cli.py  compile.py  grading.py  lpg.py  manifest.py  validation.py
tests/: conftest.py  test_acceptance_checklists.py  test_agent.py  test_config.py  test_conformance.py  test_contest_config.py  test_generator.py  test_harness_anchors.py  test_harness_evalbundle.py  test_harness_evalseed.py  test_harness_functional.py  test_harness_panel_effort.py  test_harness_round2.py  test_harness_scorecard_cli.py  test_harness_variants.py  test_implementation_plan.py  test_lpg.py  test_osdu_manifest.py  test_question_examples.py  test_questions.py  test_reference_compile.py  test_semantic_manifest.py  test_webapp_data_contract.py
