[project]
name = "oag-generator"
version = "0.1.0"
description = "Deterministic OSDU/PDM-shaped synthetic data generator + co-generated gold answers for the oil-and-gas-semantic reference base collateral (slice #2)."
readme = "README.md"
# Pinned to a stable interpreter range: determinism is the whole point of this
# generator, so we avoid the moving target of the newest interpreter/wheel set.
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26,<3",
    # Parquet footers embed the pyarrow version, so byte-stable output is guaranteed
    # only within a pyarrow major. Pinned narrowly; uv.lock is the exact-version anchor.
    "pyarrow>=20,<21",
    "pyyaml>=6,<7",
    # DuckDB is the reference-compile engine for the OSI semantic layer (ADR 0011): it
    # executes the governed metrics as SQL over the canonical Parquet. Runtime-light.
    "duckdb>=1.1,<2",
]

[project.scripts]
oag-generate = "oag_generator.cli:main"
oag-answer = "oag_semantic.cli:main"
oag-assess = "oag_harness.cli:main"
oag-seal = "oag_harness.seal_cli:main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    # MetricFlow's manifest schema + validators (ADR 0011): the "validate the OSI
    # manifest is well-formed" gate. Dev-only -- it never runs at answer time.
    "dbt-semantic-interfaces>=0.10,<0.11",
    # Validates answer submissions against spec/questions/answer_submission.schema.json
    # (issue #14). Dev-only -- library code ships the schema file, not a runtime validator.
    "jsonschema>=4,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oag_generator", "src/oag_semantic", "src/oag_harness"]

# The question catalog + submission schema live at the repo root (spec/questions) as standalone
# versioned base artifacts, but the base package loads them at run time. Force-include a copy into
# the wheel so an installed (non-editable) build can still resolve them (see questions._spec_file).
[tool.hatch.build.targets.wheel.force-include]
"spec/questions/catalog.yaml" = "oag_generator/_spec/catalog.yaml"
"spec/questions/answer_submission.schema.json" = "oag_generator/_spec/answer_submission.schema.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
